# advent-of-code-2021

./: Cargo.toml
src/: _template.rs  day-01-1.rs  day-01-2.rs  day-02-1.rs  day-02-2.rs  day-03-1.rs  day-03-2.rs  day-04-1.rs  day-04-2.rs  day-05-1.rs  day-05-2.rs  day-06-1.rs  day-06-2.rs  day-07-1.rs  day-07-2.rs  day-08-1.rs  day-08-2.rs  day-09-1.rs  day-09-2.rs  day-10-1.rs  day-11-1.rs  day-11-2.rs  day-12-1.rs  day-12-2.rs  day-13-1.rs  day-13-2.rs  day-14-1.rs  day-14-2.rs
