[package]
name = "advent-of-code-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"

[[bin]]
name = "day-01-1"
path = "src/day-01-1.rs"

[[bin]]
name = "day-01-2"
path = "src/day-01-2.rs"

[[bin]]
name = "day-02-1"
path = "src/day-02-1.rs"

[[bin]]
name = "day-02-2"
path = "src/day-02-2.rs"

[[bin]]
name = "day-03-1"
path = "src/day-03-1.rs"

[[bin]]
name = "day-03-2"
path = "src/day-03-2.rs"

[[bin]]
name = "day-04-1"
path = "src/day-04-1.rs"

[[bin]]
name = "day-04-2"
path = "src/day-04-2.rs"

[[bin]]
name = "day-05-1"
path = "src/day-05-1.rs"

[[bin]]
name = "day-05-2"
path = "src/day-05-2.rs"

[[bin]]
name = "day-06-1"
path = "src/day-06-1.rs"

[[bin]]
name = "day-06-2"
path = "src/day-06-2.rs"

[[bin]]
name = "day-07-1"
path = "src/day-07-1.rs"

[[bin]]
name = "day-07-2"
path = "src/day-07-2.rs"

[[bin]]
name = "day-08-1"
path = "src/day-08-1.rs"

[[bin]]
name = "day-08-2"
path = "src/day-08-2.rs"

[[bin]]
name = "day-09-1"
path = "src/day-09-1.rs"

[[bin]]
name = "day-09-2"
path = "src/day-09-2.rs"

[[bin]]
name = "day-10-1"
path = "src/day-10-1.rs"

[[bin]]
name = "day-10-2"
path = "src/day-10-2.rs"

[[bin]]
name = "day-11-1"
path = "src/day-11-1.rs"

[[bin]]
name = "day-11-2"
path = "src/day-11-2.rs"

[[bin]]
name = "day-12-1"
path = "src/day-12-1.rs"

[[bin]]
name = "day-12-2"
path = "src/day-12-2.rs"
